[package]
name = "assisted_deployment_and_departure"
version = "0.2.0"
edition = "2021"
authors = ["hvaren"]
description = "An addon to launch programs when the game starts and kill processes when it closes."

[lib]
crate-type = ["cdylib"]

[dependencies]
nexus = { git = "https://github.com/zerthox/nexus-rs" }
lazy_static = "1.4"
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
log = "0.4"
