[package]
name = "assisted_deployment_and_departure"
version = "0.3.0"
edition = "2021"
authors = ["hvaren"]
description = "An addon to launch programs when the game starts and kill processes when it closes."

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.21"
nexus = { git = "https://github.com/zerthox/nexus-rs", features = ["log", "log_filter"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
sysinfo = "0.30"
image = "0.25.1"
windows-icons = "0.3.0"
base64 = "0.22.1"
rfd = "0.14.1"